--- a/BookingManagementApp/appsettings.json
+++ b/BookingManagementApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-8R407N6; Integrated Security=True;Database=db_bookingapp;Connect Timeout=30;"
+  }
 }
