--- a/BookingManagementApp/appsettings.json
+++ b/BookingManagementApp/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-8R407N6; Integrated Security=True;Database=db_bookingapp;Connect Timeout=30;"
+    "DefaultConnection": "Data Source=DESKTOP-8R407N6; Integrated Security=True;Database=db_bookingapp;User Id=dandiyolen;Password = yolendesdandi;Connect Timeout=30;"
   }
 }
