add register,login,forgot password, dan change password

--- a/BookingManagementApp/appsettings.json
+++ b/BookingManagementApp/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-8R407N6; Integrated Security=True;Database=db_bookingapp;User Id=dandiyolen;Password = yolendesdandi;Connect Timeout=30;"
+  },
+  "StmpServices": {
+    "Server": "localhost",
+    "Port": 25,
+    "FromEmailAddress" : "MCCxDTS@no-replay.com"
   }
+
 }
