add booking method

--- a/BookingManagementApp/appsettings.json
+++ b/BookingManagementApp/appsettings.json
@@ -7,12 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-8R407N6; Integrated Security=True;Database=db_bookingapp;User Id=dandiyolen;Password = yolendesdandi;Connect Timeout=30;"
+    "DefaultConnection": "Data Source=DESKTOP-8R407N6; Integrated Security=True;Database=db_bookingapp;User Id=dandiyolen;Password = yolendesdandi;Connect Timeout=30;MultipleActiveResultSets=True;"
   },
   "StmpServices": {
     "Server": "localhost",
     "Port": 25,
-    "FromEmailAddress" : "MCCxDTS@no-replay.com"
+    "FromEmailAddress": "MCCxDTS@no-replay.com"
+  },
+  "JWTServices": {
+    "Secretkey": "ffndkjbqkjvbd4nd1oidfjdoija54nt3n6",
+    "Issuer": "UrlServer",
+    "Audience" :  "UrlClient"
   }
 
 }
