--- a/Client/appsettings.json
+++ b/Client/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWTServices": {
+    "Secretkey": "ffndkjbqkjvbd4nd1oidfjdoija54nt3n6",
+    "Issuer": "UrlServer",
+    "Audience": "UrlClient"
+  },
   "AllowedHosts": "*"
 }
